--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/0916dhkim/koa-login-practice#readme",
   "dependencies": {
     "koa": "^2.12.1",
+    "koa-static": "^5.0.0",
     "typescript": "^3.9.5"
   },
   "devDependencies": {
-    "@types/koa": "^2.11.3"
+    "@types/koa": "^2.11.3",
+    "@types/koa-static": "^4.0.1"
   }
 }
