--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   },
   "homepage": "https://github.com/0916dhkim/koa-login-practice#readme",
   "dependencies": {
+    "@koa/router": "^9.0.1",
     "koa": "^2.12.1",
+    "koa-bodyparser": "^4.3.0",
     "koa-static": "^5.0.0",
     "typescript": "^3.9.5"
   },
   "devDependencies": {
     "@types/koa": "^2.11.3",
-    "@types/koa-static": "^4.0.1"
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-static": "^4.0.1",
+    "@types/koa__router": "^8.0.2"
   }
 }
