--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   "homepage": "https://github.com/0916dhkim/koa-login-practice#readme",
   "dependencies": {
     "@koa/router": "^9.0.1",
+    "bcrypt": "^5.0.0",
     "koa": "^2.12.1",
     "koa-bodyparser": "^4.3.0",
     "koa-static": "^5.0.0",
+    "pg-promise": "^10.5.6",
     "typescript": "^3.9.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-static": "^4.0.1",
