--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "bcrypt": "^5.0.0",
     "koa": "^2.12.1",
     "koa-bodyparser": "^4.3.0",
+    "koa-redis": "^4.0.1",
+    "koa-session": "^6.0.0",
     "koa-static": "^5.0.0",
     "pg-promise": "^10.5.6",
     "typescript": "^3.9.5"
@@ -29,6 +31,8 @@
     "@types/bcrypt": "^3.0.0",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-redis": "^4.0.0",
+    "@types/koa-session": "^5.10.2",
     "@types/koa-static": "^4.0.1",
     "@types/koa__router": "^8.0.2"
   }
