--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "koa-session": "^6.0.0",
     "koa-static": "^5.0.0",
     "pg-promise": "^10.5.6",
-    "typescript": "^3.9.5"
-  },
-  "devDependencies": {
+    "typescript": "^3.9.5",
     "@types/bcrypt": "^3.0.0",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
